--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Hello World!</h1>
   <p>This is a paragraph.</p>
+  <button>Click me</button>
   <script src="scripts/main.js"></script>
 </body>
 </html> 
