--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <h1>Please enable JavaScript!</h1>
   <p>This is a paragraph.</p>
   <button>Click me</button>
   <script src="scripts/main.js"></script>
