--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Please enable JavaScript!</h1>
   <p>This is a paragraph.</p>
   <button>Click me</button>
-  <a title="By Conspiritech (Own work) [Public domain], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3ANetwork_Tree_diagram.png">
+  <a title="By Conspiritech (Own work) [Public domain], via Wikimedia Commons">
     <img width="256" alt="Network Tree diagram" src="//upload.wikimedia.org/wikipedia/commons/2/24/Network_Tree_diagram.png"/>
   </a>
   <script src="scripts/main.js"></script>
