--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
 <body>
   <h1>Please enable JavaScript!</h1>
-  <p>This is a paragraph.</p>
-  <button>Click me</button>
-  <a title="By Conspiritech (Own work) [Public domain], via Wikimedia Commons">
-    <img width="256" alt="Network Tree diagram" src="//upload.wikimedia.org/wikipedia/commons/2/24/Network_Tree_diagram.png"/>
-  </a>
+  <p><span onmouseover="this.style.color='black'" onmouseout="this.style.color='red'">
+    This is a paragraph.
+  </span></p>
+  <button onmouseover="this.innerHTML=Date()">Click me</button>
   <script src="scripts/main.js"></script>
 </body>
 </html> 
