--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="ISO-8859-1">
+
   <title>AVLE :)</title>
-  <link rel="stylesheet" href="style1.css">
+
+  <link rel="stylesheet" href="styles/style1.css">
 </head>
 
 <body>
-  <h1>Please enable JavaScript!</h1>
-  <p><span onmouseover="this.style.color='black'" onmouseout="this.style.color='red'">
+  <h1 onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">Please enable JavaScript!</h1>
+  <p><span onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">
     This is a paragraph.
   </span></p>
-  <button onmouseover="this.innerHTML=Date()">Click me</button>
+
+
+  <br>
+  <pre onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">             ,.-:~:-.               _ ,.,              ,.,  ' ‘       ___     
+           /':::::::::'`,          '/:::::/`,           /:::/';     .:´/::::; 
+         /;:-·~·-:;':::',        /;: :;/:::\         /;:;/:'i‘    /::/::::/:: 
+       ,'´          '`:;::`,     ,´     `;::';       ,´   'i:'i  /·´¯¯¯'`;/::
+      /                `;::\    i        \::',      ,:   'i:';  i       'i::'  
+    ,'                   '`,::;  ;         ';::\ .,_';    ';:'  ';       ¦::;  
+   i'       ,';´'`;         '\::: ';        ';::/::::;    ;':;   ;       ;::;  
+ ,'        ;' /´:`';         ';:::  \        \/::::;'   i:/'°   ';       ;:,'_ ,.-·~^;  
+ ;        ;/:;::;:';         ',:::; '\         '`~'´   ,'/      ';      ';:/:::::::::/::
+'i        '´        `'         'i::'  \                /        ,:      '/::;:-·~^';::'' 
+¦       '/`' *^~-·'´\         ';'/'‚  `,            ;'          i´        ¯          "/
+'`., .·´              `·.,_,.·´         `·.,  ,.· ´            '`·,_          _ ,,·'´‘
+                                  °          ¯         °            ¯ `'*'´ ¯          °</pre>
+
+
+
+  <button onmouseover="this.innerHTML=Date()">Mouse over me</button>
+
+  <p>
+  <textarea rows="4" cols="40">Blank.</textarea>
+  <textarea rows="4" cols="40" readonly disabled>Blank 2.</textarea>
+  </p>
+
+
   <script src="scripts/main.js"></script>
 </body>
 </html> 
