--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <textarea rows="4" cols="40" readonly disabled>Blank 2.</textarea>
   </p>
 
+  <p>THis is courier?</p>
 
   <script src="scripts/main.js"></script>
 </body>
