--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="ISO-8859-1">
 
-  <title>AVLE :)</title>
+  <title>It's a boy!</title>
 
   <link rel="stylesheet" href="styles/style1.css">
 </head>
 
 <body>
+  <img src="images/imagecopy.jpg"
+  <!--
   <h1 onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">Please enable JavaScript!</h1>
   <p><span onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">
     This is a paragraph.
@@ -16,19 +18,19 @@
 
 
   <br>
-  <pre onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">             ,.-:~:-.               _ ,.,              ,.,  ' ‘       ___     
-           /':::::::::'`,          '/:::::/`,           /:::/';     .:´/::::; 
-         /;:-·~·-:;':::',        /;: :;/:::\         /;:;/:'i‘    /::/::::/:: 
-       ,'´          '`:;::`,     ,´     `;::';       ,´   'i:'i  /·´¯¯¯'`;/::
+  <pre onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">             ,.-:~:-.               _ ,.,              ,.,  ' â€˜       ___     
+           /':::::::::'`,          '/:::::/`,           /:::/';     .:Â´/::::; 
+         /;:-Â·~Â·-:;':::',        /;: :;/:::\         /;:;/:'iâ€˜    /::/::::/:: 
+       ,'Â´          '`:;::`,     ,Â´     `;::';       ,Â´   'i:'i  /Â·Â´Â¯Â¯Â¯'`;/::
       /                `;::\    i        \::',      ,:   'i:';  i       'i::'  
-    ,'                   '`,::;  ;         ';::\ .,_';    ';:'  ';       ¦::;  
-   i'       ,';´'`;         '\::: ';        ';::/::::;    ;':;   ;       ;::;  
- ,'        ;' /´:`';         ';:::  \        \/::::;'   i:/'°   ';       ;:,'_ ,.-·~^;  
- ;        ;/:;::;:';         ',:::; '\         '`~'´   ,'/      ';      ';:/:::::::::/::
-'i        '´        `'         'i::'  \                /        ,:      '/::;:-·~^';::'' 
-¦       '/`' *^~-·'´\         ';'/'‚  `,            ;'          i´        ¯          "/
-'`., .·´              `·.,_,.·´         `·.,  ,.· ´            '`·,_          _ ,,·'´‘
-                                  °          ¯         °            ¯ `'*'´ ¯          °</pre>
+    ,'                   '`,::;  ;         ';::\ .,_';    ';:'  ';       Â¦::;  
+   i'       ,';Â´'`;         '\::: ';        ';::/::::;    ;':;   ;       ;::;  
+ ,'        ;' /Â´:`';         ';:::  \        \/::::;'   i:/'Â°   ';       ;:,'_ ,.-Â·~^;  
+ ;        ;/:;::;:';         ',:::; '\         '`~'Â´   ,'/      ';      ';:/:::::::::/::
+'i        'Â´        `'         'i::'  \                /        ,:      '/::;:-Â·~^';::'' 
+Â¦       '/`' *^~-Â·'Â´\         ';'/'â€š  `,            ;'          iÂ´        Â¯          "/
+'`., .Â·Â´              `Â·.,_,.Â·Â´         `Â·.,  ,.Â· Â´            '`Â·,_          _ ,,Â·'Â´â€˜
+                                  Â°          Â¯         Â°            Â¯ `'*'Â´ Â¯          Â°</pre>
 
 
 
@@ -42,5 +44,6 @@
   <p>THis is courier?</p>
 
   <script src="scripts/main.js"></script>
+  -->
 </body>
 </html> 
