--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img src="images/imagecopy.jpg"
+  <img src="images/imagecopy.jpg">
   <!--
   <h1 onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">Please enable JavaScript!</h1>
   <p><span onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">
