--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <title>It's a boy!</title>
 
-  <link rel="stylesheet" href="styles/style1.css">
+  <!--<link rel="stylesheet" href="styles/style1.css">-->
 </head>
 
 <body>
