--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <h1>Please enable JavaScript!</h1>
   <img src="images/imagecopy.jpg"></img>
   <!--
   <h1 onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">Please enable JavaScript!</h1>
