--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Please enable JavaScript!</h1>
-  <img src="images/imagecopy.jpg"></img>
+  <img class="slide active-slide" src="images/imagecopy.jpg"></img>
   <!--
   <h1 onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">Please enable JavaScript!</h1>
   <p><span onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">
