--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="ISO-8859-1">
 
-  <title>It's a boy!</title>
+  <title>AVLE!</title>
 
   <link rel="stylesheet" href="styles/style1.css">
 </head>
 
 <body>
   <h1>Please enable JavaScript!</h1>
-  <img class="slide active-slide" src="images/imagecopy.jpg"></img>
+  <img class="slide active-slide" src="images/Stonehenge.jpg"></img>
   <!--
   <h1 onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">Please enable JavaScript!</h1>
   <p><span onmouseover="this.style.color='white'" onmouseout="this.style.color='lightgray'">
