--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 
 
-  <button onmouseover="this.innerHTML=Date()">Mouse over me</button>
+  <button onmouseover="this.innerHTML=Date().getTime()">Mouse over me</button>
 
   <p>
   <textarea rows="4" cols="40">Blank.</textarea>
-  <textarea rows="4" cols="40" readonly disabled>Blank 2.</textarea>
+  <textarea rows="4" cols="40" readonly>Blank 2.</textarea>
   </p>
 
   <p>THis is courier?</p>
