--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 
-  <button onmouseover="this.innerHTML=Date().getTime()">Mouse over me</button>
+  <button onmouseover="this.innerHTML=(new Date).getTime()">Mouse over me</button>
 
   <p>
   <textarea rows="4" cols="40">Blank.</textarea>
