--- a/index.html
+++ b/index.html
@@ -35,10 +35,19 @@
 
   <button onmouseover="this.innerHTML=(new Date).getTime()">Mouse over me</button>
 
-  <p>
-  <textarea rows="4" cols="40">Blank.</textarea>
-  <textarea rows="4" cols="40" readonly>Blank 2.</textarea>
-  </p>
+  <p><table>
+    <tr>
+      <td>
+        <textarea rows="4" cols="40">Blank.</textarea>
+      </td>
+      <td>
+        <!-- -->
+      </td>
+      <td>
+        <textarea rows="4" cols="40" readonly>Blank 2.</textarea>
+      </td>
+    </tr>
+  </table></p>
 
   <p>THis is courier?</p>
   <script src="scripts/main.js"></script>
