--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <textarea rows="4" cols="40">Blank.</textarea>
       </td>
       <td>
-        <!-- -->
+        <button onmouseover="void(0)">Mouse over me</button>
       </td>
       <td>
         <textarea rows="4" cols="40" readonly>Blank 2.</textarea>
